2007-02-07  Zack Weinberg  <zackw@panix.com>

	* automate.cc (inventory, get_base_revision_id): Fail gracefully
	in a two-parent workspace.
	(get_current_revision_id, get_manifest_of): Work in a two-parent
	workspace.
	* tests/merge_into_workspace: Test new behavior of automate
	get_current_revision_id and get_manifest-of.
	* tests/two_parent_workspace_commands_that_fail: Un-xfail.

	* tests/merge_into_workspace_files_added: Fix for workspace conflicts.

2007-02-07  Matthew Gregan  <kinetik@orcon.net.nz>

	* cmd_merging.cc (CMD(pluck)): Migrate to new internal
	multi-parent workspace API.
	* tests/two_parent_workspace_pluck: Un-xfail test.

2007-02-07  Zack Weinberg  <zackw@panix.com>

	* cmd_diff_log.cc (prepare_diff): Handle multi-parent workspaces
	gracefully.
	* cmd_merging.cc (update): Likewise.
	* cmd_ws_commit.cc (revert): Likewise.

	* tests/two_parent_workspace_commands_that_fail
	* tests/two_parent_workspace_pluck: New tests (expected to fail).
	* testsuite.lua: Add them.
	* cmd_merging.cc (merge_into_workspace): Standardize a diagnostic.

2007-02-07  Matthew Gregan  <kinetik@orcon.net.nz>

	* cmd_merging.cc (CMD(merge_into_workspace)): N() out if user is
	trying to merge in the workspace's current revision.
	* tests/merge_into_workspace_same_rev/*: New test.
	* testsuite.lua: Add it.

2006-09-25  Zack Weinberg  <zackw@panix.com>

	* work.cc (workspace::get_work_rev): Fold into sole caller,
	get_base_and_current_roster_shape.
	* work.hh: Don't declare get_work_rev.

2006-09-21  Zack Weinberg  <zackw@panix.com>

	* roster.cc (equal_shapes): New function.
	(shallow_equal): Add boolean argument which says whether to
	compare file contents.
	(unify_rosters): Add kluge to detect shape rosters, which may not
	agree on file contents even after unification.
	(make_roster_for_merge, make_roster_for_nonmerge): Add note about
	interfaces.  Simplify the interface not used by the unit tests.
	Don't pass an app_state down to this level.