@@ -709,6 +709,7 @@ table.insert(tests, "merge_into_workspace")
 table.insert(tests, "merge_into_workspace_no_changes")
 table.insert(tests, "merge_into_workspace_files_added")
 table.insert(tests, "merge_into_workspace_attr_corpse")
+table.insert(tests, "merge_into_workspace_same_rev")
 table.insert(tests, "two_parent_workspace_commands_that_fail")
 table.insert(tests, "two_parent_workspace_pluck")
-table.insert(tests, "merge_into_workspace_same_rev")
+table.insert(tests, "two_parent_workspace_attrs")
