@@ -1,5 +1,10 @@
 2007-02-07  Zack Weinberg  <zackw@panix.com>
 
+	* cmd_ws_commit.cc (attr): Work in a two-parent workspace.
+	* tests/two_parent_workspace_attrs: New test.
+	* tests/two_parent_workspace_pluck: Make sure we can commit the
+	result of our manipulations.
+
 	* automate.cc (inventory, get_base_revision_id): Fail gracefully
 	in a two-parent workspace.
 	(get_current_revision_id, get_manifest_of): Work in a two-parent
